--- a/layouts/partials/sidebar.html
+++ b/layouts/partials/sidebar.html
@@ -1,19 +1,23 @@
 <div class="sidebar">
   <div class="container sidebar-sticky">
     <div class="sidebar-about">
-      <a href="{{ .Site.BaseURL }}"><h1>{{ .Site.Title }}</h1></a>
+      <a href="{{ .Site.BaseURL }}"><img src="{{ .Site.BaseURL }}images/logo.png" /></a>
       <p class="lead">
       {{ with .Site.Params.description }} {{.}} {{ else }}An elegant open source and mobile first theme for <a href="http://hugo.spf13.com">hugo</a> made by <a href="http://twitter.com/mdo">@mdo</a>. Originally made for Jekyll.{{end}}
       </p>
     </div>
 
     <ul class="sidebar-nav">
-      <li><a href="{{ .Site.BaseURL }}">Home</a> </li>
+      <li><i class="fas fa-home"></i> <a href="{{ .Site.BaseURL }}">Home</a> </li>
+      <li><i class="fab fa-twitter-square"></i> <a href="https://twitter.com/{{ .Site.Params.twitter }}">{{ .Site.Params.twitter }}</a></li>
+      <li><i class="fab fa-github-square"></i> <a href="https://github.com/{{ .Site.Params.github }}">{{ .Site.Params.github }}</a></li>
+      <li><i class="fas fa-envelope"></i> <a href=mailto:{{ .Site.Params.email }}>{{ .Site.Params.email }}</a></li>
+      <li><i class="fas fa-key"></i> <a href="https://{{ .Site.Params.keyserver }}/pks/lookup?op=get&search=0x{{ replace .Site.Params.pgp " " "" }}">{{ .Site.Params.pgp }}</a></li>
       {{ range .Site.Menus.main -}}
         <li><a href="{{.URL}}"> {{ .Name }} </a></li>
       {{- end }}
     </ul>
 
-    <p>{{ with .Site.Params.copyright }}{{.}}{{ else }}&copy; {{ now.Format "2006"}}. All rights reserved. {{end}}</p>
+    <p>{{ with .Site.Params.creativeCommons }}<a href="https://creativecommons.org/licenses/{{ . }}/4.0/"><img src="https://licensebuttons.net/l/{{ . }}/4.0/80x15.png" alt="CC {{.}}" class="inline" /></a>{{ end }}  {{ .Site.Params.author }}</p>
   </div>
 </div>
