--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -43,5 +43,5 @@
   <link rel="shortcut icon" type="image/png" href="/favicon.png">
 
   <!-- RSS -->
-  <link href="{{ .RSSLink }}" rel="alternate" type="application/rss+xml" title="{{ .Site.Title }}" />
+  <link href="{{ .Site.RSSLink }}" rel="alternate" type="application/rss+xml" title="{{ .Site.Title }}" />
 </head>
