--- a/layouts/partials/sidebar.html
+++ b/layouts/partials/sidebar.html
@@ -9,6 +9,7 @@
 
     <ul class="sidebar-nav">
       <li><i class="fas fa-home"></i> <a href="{{ .Site.BaseURL }}">Home</a> </li>
+      <li><i class="fas fa-rss-square"></i> <a href="{{ .Site.RSSLink }}">RSS Feed</a></li>
       <li><i class="fab fa-twitter-square"></i> <a href="https://twitter.com/{{ .Site.Params.twitter }}">{{ .Site.Params.twitter }}</a></li>
       <li><i class="fab fa-github-square"></i> <a href="https://github.com/{{ .Site.Params.github }}">{{ .Site.Params.github }}</a></li>
       <li><i class="fas fa-envelope"></i> <a href=mailto:{{ .Site.Params.email }}>{{ .Site.Params.email }}</a></li>
