--- a/layouts/partials/sidebar.html
+++ b/layouts/partials/sidebar.html
@@ -9,13 +9,13 @@
 
     <nav>
         <ul class="sidebar-nav">
-          <li><i class="fas fa-home"></i> <a href="{{ .Site.BaseURL }}">Home</a> </li>
-          <li><i class="fas fa-rss-square"></i> <a href="{{ .Site.RSSLink }}">RSS Feed</a></li>
-          <li><i class="fab fa-twitter-square"></i> <a href="https://twitter.com/{{ .Site.Params.twitter }}">{{ .Site.Params.twitter }}</a></li>
-          <li><i class="fab fa-mastodon"></i> <a href="https://{{ .Site.Params.mastodon.instance }}/@{{ .Site.Params.mastodon.username }}">{{ .Site.Params.mastodon.username }}</a></li>
-          <li><i class="fab fa-github"></i> <a href="{{ .Site.Params.git.url }}">{{ .Site.Params.git.username }}</a></li>
-          <li><i class="fas fa-envelope"></i> <a href=mailto:{{ .Site.Params.email }}>{{ .Site.Params.email }}</a></li>
-          <li><i class="fas fa-key"></i> <a href="https://{{ .Site.Params.keyserver }}/pks/lookup?op=get&search=0x{{ replace .Site.Params.pgp " " "" }}">{{ .Site.Params.pgp }}</a></li>
+          <li><i class="fas fa-home"></i> <a rel="me" href="{{ .Site.BaseURL }}">Home</a> </li>
+          <li><i class="fas fa-rss-square"></i> <a rel="me" href="{{ .Site.RSSLink }}">RSS Feed</a></li>
+          <li><i class="fab fa-twitter-square"></i> <a rel="me" href="https://twitter.com/{{ .Site.Params.twitter }}">{{ .Site.Params.twitter }}</a></li>
+          <li><i class="fab fa-mastodon"></i> <a rel="me" href="https://{{ .Site.Params.mastodon.instance }}/@{{ .Site.Params.mastodon.username }}">{{ .Site.Params.mastodon.username }}</a></li>
+          <li><i class="fab fa-github"></i> <a rel="me" href="{{ .Site.Params.git.url }}">{{ .Site.Params.git.username }}</a></li>
+          <li><i class="fas fa-envelope"></i> <a rel="me" href=mailto:{{ .Site.Params.email }}>{{ .Site.Params.email }}</a></li>
+          <li><i class="fas fa-key"></i> <a rel="me" href="https://{{ .Site.Params.keyserver }}/pks/lookup?op=get&search=0x{{ replace .Site.Params.pgp " " "" }}">{{ .Site.Params.pgp }}</a></li>
           {{ range .Site.Menus.main -}}
             <li><a href="{{.URL}}"> {{ .Name }} </a></li>
           {{- end }}
@@ -24,6 +24,6 @@
 
     <p><a href="https://creativecommons.org/licenses/{{ .Site.Params.creativeCommons }}/4.0/"><img src="{{ .Site.BaseURL}}images/cc/{{ .Site.Params.creativeCommons }}.png" alt="CC {{ .Site.Params.creativeCommons }}" class="inline" /></a> {{ .Site.Params.author }}</p>
 
-    <p class="small">Built with <a href="https://gohugo.io/">Hugo</a>, powered by <a href="https://git.abolivier.bzh/babolivier/hyde">Hyde</a></p>
+    <p class="small">Built with <a href="https://gohugo.io/">Hugo</a>, powered by <a href="https://github.com/babolivier/hyde">Hyde</a></p>
   </div>
 </aside>
