--- a/layouts/partials/sidebar.html
+++ b/layouts/partials/sidebar.html
@@ -26,5 +26,6 @@
     <p><a href="https://creativecommons.org/licenses/{{ .Site.Params.creativeCommons }}/4.0/"><img src="{{ .Site.BaseURL}}images/cc/{{ .Site.Params.creativeCommons }}.png" alt="CC {{ .Site.Params.creativeCommons }}" class="inline" /></a> {{ .Site.Params.author }}</p>
 
     <p class="small">Built with <a href="https://gohugo.io/">Hugo</a>, powered by <a href="https://github.com/babolivier/hyde">Hyde</a></p>
+    <p class="small"><a href="{{ .Site.Params.source }}">Source</a></p>
   </div>
 </aside>
