--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -35,7 +35,11 @@
   <link type="text/css" rel="stylesheet" href="{{ .Site.BaseURL }}css/syntax.css">
   <link type="text/css" rel="stylesheet" href="{{ .Site.BaseURL }}css/hyde.css">
   <link type="text/css" rel="stylesheet" href="{{ .Site.BaseURL }}css/fonts/font.css">
-  <link type="text/css" rel="stylesheet" href="{{ .Site.BaseURL }}css/fork-awesome.min.css">
+
+  <!-- FontAwesome icons -->
+  <link type="text/css" rel="stylesheet" href="{{ .Site.BaseURL }}css/fontawesome.min.css">
+  <link type="text/css" rel="stylesheet" href="{{ .Site.BaseURL }}css/fontawesome-solid.min.css">
+  <link type="text/css" rel="stylesheet" href="{{ .Site.BaseURL }}css/fontawesome-brands.min.css">
 
   <!-- Icons -->
   <link rel="apple-touch-icon-precomposed" sizes="144x144" href="/apple-touch-icon-144-precomposed.png">
